@@ -1,5 +1,7 @@
 *SVN*
 
+* Fix incorrect usage of #classify when creating the eager loading join statement.  Closes #7044 [Josh Susser]
+
 * SQLServer: quote table name in indexes query.  #2928 [keithm@infused.org]
 
 * Subclasses of an abstract class work with single-table inheritance.  #5704, #7284 [BertG, nick+rails@ag.arizona.edu]
